go-app1/go-app1-blue-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: go-app1
    deploy: blue
  name: go-app1-blue-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: go-app1
      deploy: blue
  template:
    metadata:
      labels:
        app: go-app1
        deploy: blue
        version: v0.1.67
    spec:
      containers:
      - env:
        - name: APPNAME
          value: app1
        image: 287241598491.dkr.ecr.us-west-2.amazonaws.com/application-build-docker-images:v0.1.67
        name: go-app
        ports:
        - containerPort: 3000
