go-app1/go-app1-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-app1-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: go-app1
  template:
    metadata:
      labels:
        app: go-app1
    spec:
      containers:
      - env:
        - name: APPNAME
          value: app1
        image: 287241598491.dkr.ecr.us-west-2.amazonaws.com/application-build-docker-images:v0.1.28
        name: go-app
        ports:
        - containerPort: 3000
