go-app1/go-app1-destination.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: go-app1-destination
spec:
  host: go-app1-service.default.svc.cluster.local
  subsets:
    - name: active
      labels:
        deploy: green
    - name: preview
      labels:
        deploy: blue
