go-app1/go-app1-green-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: go-app1
    deploy: green
  name: go-app1-green-deploy
spec:
  replicas: 2
  selector:
    matchLabels:
      app: go-app1
      deploy: green
  template:
    metadata:
      labels:
        app: go-app1
        version: v0.1.68
        deploy: green
    spec:
      containers:
        - env:
            - name: APPNAME
              value: app1
          image: 287241598491.dkr.ecr.us-west-2.amazonaws.com/application-build-docker-images:v0.1.68
          name: go-app
          ports:
            - containerPort: 3000
