go-app1/go-app1-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-app1-service
spec:
  type: ClusterIP
  clusterIP: None
  selector:
    app: go-app1
  ports:
  - name: go-app1-http
    protocol: TCP
    port: 3000
