go-app1/sidecar-envoy-configmap.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: envoy-sidecar
data:
  envoy.yaml: |
    static_resources:
      listeners:
      - address:
          socket_address:
            address: 0.0.0.0
            port_value: 8786
        filter_chains:
        - filters:
          - name: envoy.http_connection_manager
            config:
              access_log:
              - name: envoy.file_access_log
                config:
                  path: "/dev/stdout"
              codec_type: AUTO
              stat_prefix: ingress_http
              route_config:
                name: local_route
                virtual_hosts:
                - name: http
                  domains:
                  - "*"
                  routes:
                  - match:
                      prefix: "/app"
                    route:
                      cluster: go-app
              http_filters:
              # - name: envoy.health_check
              #   config:
              #     pass_through_mode: false
              #     headers:
              #     - name: ":path"
              #       exact_match: "/healthz"
              #     - name: "x-envoy-livenessprobe"
              #       exact_match: "healthz"
              - name: envoy.router
                config: {}
      clusters:
      - name: go-app
        connect_timeout: 0.5s
        type: STATIC
        lb_policy: ROUND_ROBIN
        # http2_protocol_options: {}
        load_assignment:
          cluster_name: go-app
          endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: "127.0.0.1"
                    port_value: 3000
        # health_checks:
        #   timeout: 1s
        #   interval: 10s
        #   unhealthy_threshold: 2
        #   healthy_threshold: 2
        #   grpc_health_check: {}
    admin:
      access_log_path: "/dev/stdout"
      address:
        socket_address:
          address: 127.0.0.1
          port_value: 8090
